@@ -1,0 +1,2 @@
+Style1;MULTIPOLYGON(((175 150,125 100,50 60,20 40,175 150)),((130 170,130 166,128 162,127 159,124 156,121 153,118 152,114 150,110 150,106 150,102 152,99 153,96 156,93 159,92 162,90 166,90 170,90 174,92 178,93 181,96 184,99 187,102 188,106 190,110 190,114 190,118 188,121 187,124 184,127 181,128 178,130 174,130 170)))
+StrokedPoly1;MULTILINESTRING((121 187,175 150),(118 188,121 187),(114 190,118 188),(110 190,114 190),(106 190,110 190),(102 188,106 190),(99 187,102 188),(96 184,99 187),(93 181,96 184),(92 178,93 181),(20 40,92 178),(20 40,125 100),(125 100,175 150),(124 156,125 100),(124 156,175 150),(124 156,127 159),(127 159,175 150),(127 159,128 162),(128 162,175 150),(128 162,130 166),(130 166,175 150),(130 166,130 170),(130 170,175 150),(130 174,130 170),(130 174,175 150),(128 178,130 174),(128 178,175 150),(127 181,128 178),(127 181,175 150),(124 184,127 181),(124 184,175 150),(121 187,124 184),(118 188,124 184),(121 153,124 184),(118 188,121 153),(93 181,121 153),(93 181,118 188),(93 181,102 188),(102 188,118 188),(93 181,99 187),(90 174,121 153),(90 174,93 181),(90 174,92 178),(20 40,90 174),(90 170,90 174),(20 40,90 170),(90 170,90 166),(20 40,90 166),(50 60,90 166),(20 40,50 60),(50 60,125 100),(50 60,99 153),(99 153,125 100),(99 153,102 152),(102 152,125 100),(102 152,106 150),(106 150,125 100),(106 150,110 150),(110 150,125 100),(110 150,114 150),(114 150,125 100),(114 150,118 152),(118 152,125 100),(118 152,121 153),(121 153,125 100),(121 153,124 156),(121 153,127 159),(121 153,130 170),(127 159,130 170),(110 150,118 152),(110 150,121 153),(106 150,121 153),(102 152,121 153),(90 174,102 152),(96 156,102 152),(90 174,96 156),(93 159,96 156),(90 174,93 159),(90 170,93 159),(90 166,93 159),(92 162,93 159),(90 166,92 162),(50 60,92 162),(50 60,93 159),(50 60,96 156),(96 156,99 153),(124 184,130 170),(124 184,128 178),(128 178,130 170),(127 159,130 166),(106 190,118 188),(106 190,114 190))
