@@ -167,8 +167,8 @@ polygonStrokeWidth = 0
 styleName = StrokedPoly1
 pointSize = 6
 pointColor = "#00bfff"
-lineWidth = 7
-lineColor = "#00bfff"
+lineWidth = 1
+lineColor = "#000000"
 polygonFillColor = "#00bfff"
 polygonStrokeColor = "#000000"
 polygonStrokeWidth = 1
