@@ -475,7 +475,88 @@ MULTIPOLYGON(
        </refsection>
 
 	</refentry>
+	<refentry id="ST_ConstrainedDelaunayTriangles">
+		<refnamediv>
+			<refname>ST_ConstrainedDelaunayTriangles</refname>
 
+			<refpurpose>
+Return a constrained Delaunay triangulation around the given input geometry.
+			</refpurpose>
+		</refnamediv>
+
+		<refsynopsisdiv>
+			<funcsynopsis>
+			  <funcprototype>
+				<funcdef>geometry <function>ST_ConstrainedDelaunayTriangles</function></funcdef>
+				<paramdef><type>geometry </type> <parameter>g1</parameter></paramdef>
+			  </funcprototype>
+			</funcsynopsis>
+		</refsynopsisdiv>
+
+		  <refsection>
+			<title>Description</title>
+
+			<para>
+Return a <ulink
+url="https://en.wikipedia.org/wiki/Constrained_Delaunay_triangulation">Constrained Delaunay
+triangulation</ulink> around the vertices of the input geometry.
+Output is a TIN.
+			</para>
+			<para>&sfcgal_required;</para>
+			<para>Availability: 3.0.0</para>
+			<para>&Z_support;</para>
+		</refsection>
+			  <refsection>
+		<title>Examples</title>
+			<informaltable>
+				  <tgroup cols="2">
+					<tbody>
+					  <row>					
+						  <entry><para><informalfigure>
+							<mediaobject>
+							  <imageobject>
+								<imagedata fileref="images/st_constraineddelaunaytriangles01.png" />
+							  </imageobject>
+							  <caption><para>ST_ConstrainedDelaunayTriangles of 2 polygons</para></caption>
+							</mediaobject>
+						  </informalfigure>
+						  <programlisting>
+select ST_ConstrainedDelaunayTriangles(
+               ST_Union(
+                       'POLYGON((175 150, 20 40, 50 60, 125 100, 175 150))'::geometry,
+                       ST_Buffer('POINT(110 170)'::geometry, 20)
+                   )
+           );
+				</programlisting>
+						  </para></entry>
+							<entry><para><informalfigure>
+							<mediaobject>
+							  <imageobject>
+								<imagedata fileref="images/st_constraineddelaunaytriangles02.png" />
+							  </imageobject>
+							  <caption><para><xref linkend="ST_DelaunayTriangles" />  of 2 polygons. Triangle edges cross polygon boundaries.</para></caption>
+							</mediaobject>
+						  </informalfigure>
+						  <programlisting>
+select ST_DelaunayTriangles(
+               ST_Union(
+                       'POLYGON((175 150, 20 40, 50 60, 125 100, 175 150))'::geometry,
+                       ST_Buffer('POINT(110 170)'::geometry, 20)
+                   )
+	   );
+</programlisting>
+						  </para></entry>						  
+			 </row>
+		</tbody>
+	</tgroup>
+</informaltable>
+	  </refsection>
+		<refsection>
+			<title>See Also</title>
+			<para><xref linkend="ST_DelaunayTriangles" />, <xref linkend="ST_ConcaveHull" />, <xref linkend="ST_Dump" />
+			</para>
+		</refsection>
+	</refentry>
 	<refentry id="ST_3DIntersection">
 	  <refnamediv>
 		<refname>ST_3DIntersection</refname>
